# egui_project_template

./: .gitignore  Cargo.toml  foo.txt
app/: Cargo.toml
config/: config.toml  default_config.toml
src/: config.rs  logger.rs  main.rs  ui.rs
src/background_manager/: manager.rs
src/config/: config.rs  language_config.rs  logger_config.rs  window_config.rs
src/logger/: subcriber.rs
src/ui/: central_area.rs  fonts.rs  left_panel.rs  main_window.rs  menu_bar.rs
src/utils/: constants.rs  utils.rs
translations/: chinese.toml  english.toml
