[package]
name = "bs_toolbox"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32.1"
eframe = { version = "0.32.1", default-features = false, features = ["wgpu"] }
wgpu = "25.0.2"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
